--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
-- name: envoyproxy/envoy-build-ubuntu
+- name: envoyproxy/envoy-build-ubuntu:e63e6efb674f533a3a051d19c370cb730a3f813a
   args: ['bazel', 'build', '--google_default_credentials', '--remote_http_cache=https://storage.googleapis.com/$PROJECT_ID-cache', '-c', 'dbg', '//docker:envoy.tar']
 - name: gcr.io/cloud-builders/docker
   args: ['load', '-i', 'bazel-bin/docker/envoy.tar']
@@ -8,3 +8,5 @@ steps:
 images:
 - 'gcr.io/$PROJECT_ID/envoy'
 timeout: 18000s
+options:
+  machineType: 'N1_HIGHCPU_8'
